--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -5,22 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecast</title>
     <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
             rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/css/bootstrap.min.css"
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+            crossorigin="anonymous"
     />
+    <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"
+    ></script>
+    <script
+            src="https://kit.fontawesome.com/d087a2058d.js"
+            crossorigin="anonymous"
+    ></script>
     <style>
       .card {
         margin-bottom: 20px;
-        border: 3px solid #000; /* Белая рамка */
+        border: 3px solid #FFF; /* Белая рамка */
         border-radius: 10px; /* Радиус скругления */
       }
     </style>
 </head>
 
 <body>
+<div class="d-flex justify-content-end mt-4 me-4">
+    <a href="register.html" class="btn btn-primary me-2">Register</a>
+    <a href="login.html" class="btn btn-primary">Login</a>
+</div>
 <div class="container">
     <div class="row justify-content-center align-items-center min-vh-100">
         <div class="col-md-6">
+
             <h1 class="text-center mb-4">Weather Forecast</h1>
             <form id="search-form" class="mb-3">
                 <div class="input-group">
@@ -69,30 +85,83 @@
 
         function renderWeather(weatherData) {
           weatherList.empty();
-          weatherData.forEach(function (weather) {
-            const card = createWeatherCard(weather);
-            weatherList.append(card);
-          });
+            let row;
+            weatherData.forEach(function (weather, index) {
+              if (index % 3 === 0) {
+                row = $("<div>").addClass("row justify-content-center");
+                weatherList.append(row);
+              }
+              const card = createWeatherCard(weather);
+              card.addClass("col-md-4");
+              row.append(card);
+            });
         }
 
         function createWeatherCard(weather) {
+          const section = $("<section>")
+            .css("background-color", "#4B515D");
+          const container = $("<div>")
+            .addClass("container py-5 h-100")
+            .appendTo(section);
+          const col = $("<div>")
+            .addClass("col-md-12")
+            .appendTo(container);
           const card = $("<div>")
             .addClass("card")
-            .css("width", "18rem"); // Set card width
-          const img = $("<img>")
-            .addClass("card-img-top")
-            .attr("src", weather.icon)
-            .attr("alt", weather.description);
-          const cardBody = $("<div>").addClass("card-body").appendTo(card);
+            .css("color", "#4B515D")
+            .css("border-radius", "35px")
+            .appendTo(col);
+          const cardBody = $("<div>")
+            .addClass("card-body p-4")
+            .appendTo(card);
 
-          $("<h5>")
-            .addClass("card-title")
-            .text(weather.city)
+          const cityTimeContainer = $("<div>")
+            .addClass("d-flex")
             .appendTo(cardBody);
-          $("<p>").addClass("card-text").text(weather.description).appendTo(cardBody);
+          $("<h6>")
+            .addClass("flex-grow-1")
+            .text(weather.city)
+            .appendTo(cityTimeContainer);
+          $("<h6>")
+            .text(weather.dtTxt)
+            .appendTo(cityTimeContainer);
 
-          img.appendTo(card);
-          return card;
+          const weatherInfoContainer = $("<div>")
+            .addClass("d-flex flex-column text-center mt-5 mb-4")
+            .appendTo(cardBody);
+          $("<h6>")
+            .addClass("display-4 mb-0 font-weight-bold")
+            .css("color", "#1C2331")
+            .text(weather.current)
+            .appendTo(weatherInfoContainer);
+          $("<span>")
+            .addClass("small")
+            .css("color", "#868B94")
+            .text(weather.description)
+            .appendTo(weatherInfoContainer);
+
+          const weatherDetailsContainer = $("<div>")
+            .addClass("d-flex align-items-center")
+            .appendTo(cardBody);
+          const weatherDetails = $("<div>")
+            .addClass("flex-grow-1")
+            .css("font-size", "1rem")
+            .appendTo(weatherDetailsContainer);
+          $("<div>")
+            .html(`<i class="fas fa-wind fa-fw" style="color: #868B94;"></i> <span class="ms-1">${weather.windSpeed} м/с</span>`)
+            .appendTo(weatherDetails);
+          $("<div>")
+            .html(`<i class="fas fa-tint fa-fw" style="color: #868B94;"></i> <span class="ms-1">${weather.humidity}%</span>`)
+            .appendTo(weatherDetails);
+          $("<div>")
+            .html(`<i class="fas fa-temperature-empty fa-fw" style="color: #868B94;"></i> <span class="ms-1">${weather.pressure}мм.рт.</span>`)
+            .appendTo(weatherDetails);
+
+          $("<div>")
+            .append($("<img>").attr("src", weather.icon).attr("width", "100px"))
+            .appendTo(weatherDetailsContainer);
+
+          return section;
         }
       });
     </script>
